# termgrep

./: Cargo.toml
.github/workflows/: build.yml
src/: main.rs
testdata/: hello.cast  sample.cast  smaller.cast.zst
