[package]
name = "asciinema_grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

avt = { git = "https://github.com/asciinema/avt" }
hyperscan = "0.3"
serde = "1.0.189"
serde_json = "1.0"
clap = {version = "4.4.6", features = ["derive"]}
chrono = "0.4.31"
log = "0.4.20"
zstd = "0.13.0"
